--- a/contact.css
+++ b/contact.css
@@ -28,8 +28,8 @@ h1, h2, h3, h4, h5, h6,
 p, blockquote, pre,
 ul, ol, dl, figure,
 .highlight {
-  margin-bottom: 15px;
-  margin-top: 15px; }
+  margin-bottom: 0.938em;
+  margin-top: 0.938em; }
 
 /**
  * Images
