san diego panorama

--- a/main.css
+++ b/main.css
@@ -73,8 +73,8 @@ ul, ol, dl, figure,
 
 #san-diego-skyline {
 background-image: 
-url("http://aaronchang.com/wp-content/uploads/images/products/p-19219-4171_SD_Skyline_Dusk_Blue_8505_24x96_web.jpg");
-margin-top: -1.72em;
+url("http://127.0.01/RED/Desktop/SanDiego_panorama.jpg");
+margin-top: -6em;
 background-repeat: no-repeat;
 }
 
