--- a/main.css
+++ b/main.css
@@ -76,16 +76,16 @@ ul, ol, dl, figure,
   	}
   } */
 
-  /* @media only screen and (max-device-width: 760px) {
+  @media only screen and (max-width: 480px) {
 		#camp-david img {
-  		 float: right;
+  		 float: none;
   		 clear: left;
   		position: relative;
-  		margin-top: -15em;
-  		max-width: 30%;
-  		max-height: 50%;
+  		margin-top: 0em;
+  		max-width: 100%;
+  		max-height: 100%;
   	}
-  } */
+  }
 
 
  
