--- a/main.css
+++ b/main.css
@@ -85,6 +85,11 @@ ul, ol, dl, figure,
   		max-width: 100%;
   		max-height: 100%;
   	}
+    #berlin-skyline img{
+      position: relative;
+      float: none;
+      background-position: center;
+    }
   }
 
 
